Implement process memory locking (mlockall) via the FFM API
HardenedStatus.memoryLocked was advertised but hardcoded false -- mlock was never
implemented. Add MemoryLock, a best-effort mlockall(MCL_CURRENT|MCL_FUTURE) call
over the JDK 25 Foreign Function & Memory API, and a Builder.lockMemory(boolean)
opt-in (default off, because mlockall is a whole-process operation that can fail
on a low RLIMIT_MEMLOCK). When enabled, status().memoryLocked() reports the
actual syscall result -- true only if the lock took -- never a hardcoded value.
Failures (missing native access, low ulimit, non-POSIX) are logged and reported
as false rather than thrown. Silent operation needs
--enable-native-access=de.swiesend.secretservice.hardened.

Also fix epochCreated: it was Instant.now() computed per status() call; it now
tracks the real epoch creation/rotation time.